--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,9 @@ jobs:
     name: Deploy to ${{ github.event.inputs.environment || 'dev' }}
     runs-on: ubuntu-latest
     environment: ${{ github.event.inputs.environment || 'dev' }}
-    
+    env:
+      AWS_REGION: ${{ secrets.DEFAULT_AWS_REGION }}
+      AWS_DEFAULT_REGION: ${{ secrets.DEFAULT_AWS_REGION }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
